--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "devDependencies": {
     "ava": "^0.24.0",
     "bili": "^0.19.0"
+  },
+  "dependencies": {
+    "diacritics": "^1.3.0"
   }
 }
