--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bili": "^0.19.0"
   },
   "dependencies": {
-    "diacritics": "^1.3.0"
+    "diacritics": "^1.3.0",
+    "uncouple": "^0.2.0"
   }
 }
