--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "cullender",
   "version": "0.4.0",
   "description": "A simple and composable way to filter data.",
-  "main": "dist/cullender.common.js",
+  "main": "dist/cullender.cjs.js",
   "module": "dist/cullender.es.js",
+  "browser": "dist/cullender.js",
   "scripts": {
     "test": "npm run build && ava",
-    "build": "bili",
+    "build": "bili src/index.js --format es,cjs,umd --js buble --banner",
     "prepare": "npm test"
   },
   "repository": {
@@ -34,11 +35,11 @@
   },
   "homepage": "https://github.com/VitorLuizC/cullender#readme",
   "devDependencies": {
-    "ava": "^0.24.0",
-    "bili": "^0.19.0"
+    "ava": "^0.25.0",
+    "bili": "^3.1.2"
   },
   "dependencies": {
-    "normalize-text": "^0.1.1",
-    "uncouple": "^0.2.0"
+    "normalize-text": "^0.4.2",
+    "uncouple": "^0.3.1"
   }
 }
